--- a/workflows/scrape.yml
+++ b/workflows/scrape.yml
@@ -1,1 +1,46 @@
+name: Scrape
+
+on:
+  workflow_dispatch: {}
+
+jobs:
+  scrape:
+    runs-on: ubuntu-latest
+
+    env:
+      # ====== 必要に応じて編集 ======
+      TARGET_URLS: "https://example.com"   # カンマ区切りで複数指定OK
+      OUTPUT_DIR: "output"
+      # Google Sheets 連携（Secrets推奨。なければ自動でスキップ）
+      GSHEET_JSON_B64: ${{ secrets.GSHEET_JSON_B64 }}
+      GSHEET_KEY: ${{ secrets.GSHEET_KEY }}
+      GSHEET_WORKSHEET: ${{ secrets.GSHEET_WORKSHEET }}
+      # ============================
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install deps (no requirements.txt needed)
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests beautifulsoup4 pandas google-auth gspread
+
+      - name: Run scraper
+        run: |
+          python scripts/scrape.py
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: scrape-output
+          path: |
+            output/*.csv
+            output/*.json
+          if-no-files-found: warn
 
