--- a/workflows/scrape.yml
+++ b/workflows/scrape.yml
@@ -1,43 +1,42 @@
 name: Scrape
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      target_urls:
+        description: "Comma-separated URLs"
+        required: true
+        default: "https://kireireport.com/clinics/1929"
+      write_settings:
+        description: "Write settings sheet? (true/false)"
+        required: false
+        default: "true"
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
     env:
-      # ここをあなたのターゲットに変更済み
-      TARGET_URLS: "https://kireireport.com/clinics/1929"
+      TARGET_URLS: ${{ inputs.target_urls }}
       OUTPUT_DIR: "output"
-
-      # Google Sheets（Secretsに登録しておく）
       GSHEET_JSON_B64: ${{ secrets.GSHEET_JSON_B64 }}
       GSHEET_KEY: ${{ secrets.GSHEET_KEY }}
       GSHEET_WORKSHEET: scrape
-
-      # 設定シートを書きたい時だけ true（普段はfalse/未設定でOK）
-      WRITE_SETTINGS_SHEET: "true"
+      WRITE_SETTINGS_SHEET: ${{ inputs.write_settings }}
       SETTINGS_SHEET_NAME: "settings"
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 pandas google-auth gspread
-
       - name: Run scraper
         run: python scripts/scrape.py
-
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
