--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -4,11 +4,31 @@ on:
   workflow_dispatch:
     inputs:
       target_urls:
-        description: "Comma-separated URLs"
-        required: true
-        default: "https://kireireport.com/clinics/1929"
+        description: "Comma-separated URLs (optional)"
+        required: false
+        default: ""
+      clinic_ids:
+        description: "Comma-separated clinic IDs (optional, e.g. 1929,5727)"
+        required: false
+        default: ""
+      id_from:
+        description: "ID range start (inclusive, optional)"
+        required: false
+        default: ""
+      id_to:
+        description: "ID range end (inclusive, optional)"
+        required: false
+        default: ""
+      id_step:
+        description: "ID step (optional)"
+        required: false
+        default: "1"
       write_settings:
         description: "Write settings sheet? (true/false)"
+        required: false
+        default: "true"
+      write_targets_sheet:
+        description: "Write 'targets' sheet? (true/false)"
         required: false
         default: "true"
 
@@ -16,26 +36,44 @@ jobs:
   scrape:
     runs-on: ubuntu-latest
     env:
+      # 入力値
       TARGET_URLS: ${{ inputs.target_urls }}
+      CLINIC_IDS: ${{ inputs.clinic_ids }}
+      ID_FROM: ${{ inputs.id_from }}
+      ID_TO: ${{ inputs.id_to }}
+      ID_STEP: ${{ inputs.id_step }}
+      BASE_CLINIC_URL: "https://kireireport.com/clinics"
+
+      # 出力
       OUTPUT_DIR: "output"
+
+      # Google Sheets（リポジトリSecretsに入れておく）
       GSHEET_JSON_B64: ${{ secrets.GSHEET_JSON_B64 }}
       GSHEET_KEY: ${{ secrets.GSHEET_KEY }}
       GSHEET_WORKSHEET: scrape
+
+      # オプション
       WRITE_SETTINGS_SHEET: ${{ inputs.write_settings }}
       SETTINGS_SHEET_NAME: "settings"
+      WRITE_TARGETS_SHEET: ${{ inputs.write_targets_sheet }}
+      TARGETS_SHEET_NAME: "targets"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 pandas google-auth gspread
+
       - name: Run scraper
         run: python scripts/scrape.py
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -43,4 +81,5 @@ jobs:
           path: |
             output/*.csv
             output/*.json
+            output/*.txt
           if-no-files-found: warn
