--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -4,9 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       target_urls:
-        description: "Comma or newline separated URLs (optional)"
+        description: "Comma or newline separated URLs (optional). If empty, use start_id/end_id."
         required: false
         default: |
+      start_id:
+        description: "Start clinic ID (e.g. 1). Ignored if target_urls is set."
+        required: false
+        default: "1"
+      end_id:
+        description: "End clinic ID (e.g. 9999). Ignored if target_urls is set."
+        required: false
+        default: "9999"
       write_settings:
         description: "Write settings sheet? (true/false)"
         required: false
@@ -16,7 +24,7 @@ on:
         required: false
         default: "true"
 
-# 連打しても前の実行を自動キャンセルしない
+# 連打で前Runを潰さない
 concurrency:
   group: scrape-${{ github.ref }}
   cancel-in-progress: false
@@ -24,31 +32,28 @@ concurrency:
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
-    # 長時間スクレイプのタイムアウト緩和（最大6時間）
     timeout-minutes: 360
 
     env:
-      # 自動探索の上限（0001〜END_ID、TARGET_URLS が空のときに使用）
-      END_ID: "9999"
-
-      # 出力フォルダ
+      # 既定の自動探索は 1〜END_ID（inputs が空のときに使用）
+      START_ID: ${{ inputs.start_id }}
+      END_ID:   ${{ inputs.end_id }}
       OUTPUT_DIR: "output"
 
-      # Google Sheets（Secrets に登録）
+      # Google Sheets（Secrets）
       GSHEET_JSON_B64: ${{ secrets.GSHEET_JSON_B64 }}
       GSHEET_KEY: ${{ secrets.GSHEET_KEY }}
 
-      # 手動入力（優先。空なら END_ID を使って自動生成）
+      # 手動URL（優先）
       TARGET_URLS: ${{ inputs.target_urls }}
 
-      # オプション（設定記録、URL記録）
+      # 設定/URL記録
       WRITE_SETTINGS_SHEET: ${{ inputs.write_settings }}
       SETTINGS_SHEET_NAME: "settings"
       WRITE_TARGETS_SHEET: ${{ inputs.write_targets_sheet }}
       TARGETS_SHEET_NAME: "targets"
 
-      # 出力先シート名
+      # 出力シート名
       CLINICS_SHEET_NAME: "clinics"
       MENUS_SHEET_NAME:   "menus"
       HOURS_SHEET_NAME:   "hours"
@@ -56,6 +61,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      # 何があっても最低限のartifactを残すための準備
+      - name: Prepare output folder
+        run: |
+          mkdir -p output
+          echo "run_id=${{ github.run_id }}"   >  output/_meta.txt
+          echo "run_number=${{ github.run_number }}" >> output/_meta.txt
+          echo "started_at=$(date -u +%FT%TZ)" >> output/_meta.txt
 
       - name: Setup Python
         uses: actions/setup-python@v5
@@ -68,10 +81,34 @@ jobs:
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4 pandas google-auth gspread
 
+      # 参考用: このRunで何をターゲットにするかをファイルに残す
+      - name: Show targets and save plan
+        shell: bash
+        run: |
+          set -e
+          mkdir -p output
+          if [ -n "${TARGET_URLS// }" ]; then
+            echo "Using TARGET_URLS input"
+            # 正規化して targets.txt に保存
+            echo "${TARGET_URLS}" | tr ',\r' '\n' | sed 's/^[ \t]*//;s/[ \t]*$//' | grep -E '^https?://' | sort -u > output/targets.txt
+          else
+            echo "Using START_ID..END_ID"
+            start=${START_ID:-1}
+            end=${END_ID:-9999}
+            : > output/targets.txt
+            for ((i=start; i<=end; i++)); do
+              printf "https://kireireport.com/clinics/%04d\n" "$i" >> output/targets.txt
+            done
+          fi
+          echo "Planned targets:"
+          head -n 20 output/targets.txt || true
+          wc -l output/targets.txt || true
+
       - name: Run scraper
+        # スクリプト側は TARGET_URLS が空なら START_ID〜END_ID を見て自動生成する実装にしておく
         run: python scripts/scrape.py
 
-      # キャンセル/失敗でも出力を必ず回収
+      # キャンセル/失敗でも成果物回収
       - name: Upload artifact
         if: always()
         uses: actions/upload-artifact@v4
