--- a/.github/workflows/db_ssh_test.yml
+++ b/.github/workflows/db_ssh_test.yml
@@ -18,17 +18,19 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Create SSH Tunnel
+      - name: Create SSH Tunnel (port forwarding)
         run: |
-          ssh -f -N -L 3307:127.0.0.1:3306 -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
+          echo "Opening SSH tunnel to ${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }} ..."
+          nohup ssh -i ~/.ssh/id_rsa \
+            -p ${{ secrets.SSH_PORT }} \
+            -o StrictHostKeyChecking=no \
+            -f -N -L 3307:127.0.0.1:3306 \
+            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
+          echo "✅ SSH tunnel established"
 
       - name: Install dependencies
-        run: pip install sqlalchemy pymysql
+        run: |
+          pip install sqlalchemy pymysql
 
       - name: Test DB Connection via SSH Tunnel
         env:
@@ -38,12 +40,11 @@ jobs:
         run: |
           python - <<'PYCODE'
           from sqlalchemy import create_engine, text
-          import os
-
+          import os, time
+          time.sleep(3)
           db_user = os.environ["DB_USER"]
           db_pass = os.environ["DB_PASS"]
           db_name = os.environ["DB_NAME"]
-
           url = f"mysql+pymysql://{db_user}:{db_pass}@127.0.0.1:3307/{db_name}?charset=utf8mb4"
           print("Connecting via SSH tunnel:", url.replace(db_pass, "********"))
           engine = create_engine(url, echo=False)
