--- a/.github/workflows/db_ssh_test.yml
+++ b/.github/workflows/db_ssh_test.yml
@@ -18,15 +18,21 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -p ${{ secrets.SSH_PORT }} -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Create SSH Tunnel (port forwarding)
+      - name: Create SSH Tunnel (keep-alive)
         run: |
           echo "Opening SSH tunnel to ${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }} ..."
           nohup ssh -i ~/.ssh/id_rsa \
             -p ${{ secrets.SSH_PORT }} \
-            -o StrictHostKeyChecking=no \
-            -f -N -L 3307:127.0.0.1:3306 \
-            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}
-          echo "✅ SSH tunnel established"
+            -o ServerAliveInterval=60 \
+            -o ExitOnForwardFailure=yes \
+            -N -L 3307:127.0.0.1:3306 \
+            ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} > tunnel.log 2>&1 &
+          sleep 5
+          echo "✅ SSH tunnel established (port 3307)"
+
+      - name: Verify Tunnel
+        run: |
+          netstat -an | grep 3307 || echo "⚠️ Tunnel not detected"
 
       - name: Install dependencies
         run: |
@@ -47,8 +53,15 @@ jobs:
           db_name = os.environ["DB_NAME"]
           url = f"mysql+pymysql://{db_user}:{db_pass}@127.0.0.1:3307/{db_name}?charset=utf8mb4"
           print("Connecting via SSH tunnel:", url.replace(db_pass, "********"))
-          engine = create_engine(url, echo=False)
-          with engine.connect() as conn:
-              result = conn.execute(text("SELECT NOW();"))
-              print("✅ Connected successfully:", result.scalar())
+          try:
+              engine = create_engine(url, echo=False)
+              with engine.connect() as conn:
+                  result = conn.execute(text("SELECT NOW();"))
+                  print("✅ Connected successfully:", result.scalar())
+          except Exception as e:
+              print("❌ Connection failed:", e)
           PYCODE
+
+      - name: Show SSH logs
+        if: always()
+        run: cat tunnel.log || true
